Continuata scrittura su csv e salvataggio utenti duplicati